# turbo-xlsx

./: .gitignore  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tarpaulin.toml  tsconfig.json
.github/workflows/: ci.yml  release-crates.yml  release-py.yml  release.yml
benches/competitive/: README.md  package-lock.json  package.json
benches/competitive-py/: README.md  parse_compat.py  perf.py  requirements.txt
benches/competitive/src/: adapters.mjs  conformance.mjs  parse-compat.mjs  parse-fixtures.mjs  parse-perf.mjs  perf.mjs  profile.mjs  workloads.mjs
benches/parse-native/: Cargo.toml  README.md
benches/parse-native/src/: common.rs  hotspot.rs  main.rs
crates/turbo-xlsx-core/: Cargo.toml  README.md
crates/turbo-xlsx-core/benches/: hotspot.rs  write.rs
crates/turbo-xlsx-core/src/: b64.rs  drawing.rs  encrypt.rs  error.rs  lib.rs  model.rs  numfmt.rs  package.rs  style.rs  validate.rs  worksheet.rs  writer.rs  xml.rs  zip.rs
crates/turbo-xlsx-core/src/parse/: inflate.rs  mod.rs  read.rs  serialize.rs  unzip.rs  xml.rs
crates/turbo-xlsx-core/tests/: encrypt.rs  images.rs  integration.rs  parse.rs
crates/turbo-xlsx-mcp/: Cargo.toml  README.md
crates/turbo-xlsx-mcp/src/: lib.rs  main.rs
crates/turbo-xlsx-napi/: Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package.json
crates/turbo-xlsx-napi/__test__/: conformance.test.mjs  images.test.mjs
crates/turbo-xlsx-napi/schema/: turbo-xlsx.workbook.schema.json
crates/turbo-xlsx-napi/scripts/: copy-addon.mjs
crates/turbo-xlsx-napi/src/: errors.rs  lib.rs
crates/turbo-xlsx-py/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/turbo-xlsx-py/python/turbo_xlsx/: __init__.py  __init__.pyi
crates/turbo-xlsx-py/src/: convert.rs  errors.rs  lib.rs
crates/turbo-xlsx-py/tests/: test_write.py
crates/turbo-xlsx-wasm/: Cargo.toml  README.md
crates/turbo-xlsx-wasm/__test__/: conformance.test.mjs
crates/turbo-xlsx-wasm/src/: convert.rs  lib.rs  program.rs
schema/: turbo-xlsx.workbook.schema.json
scripts/: cc-check.js
tools/cc-check/: Cargo.toml
tools/cc-check/src/: main.rs
