[workspace]
resolver = "2"
members = [
    "crates/turbo-xlsx-core",
    "crates/turbo-xlsx-napi",
    "crates/turbo-xlsx-py",
    "crates/turbo-xlsx-wasm",
    "crates/turbo-xlsx-mcp",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/miaskiewicz/turbo-xlsx"
authors = ["turbo-xlsx contributors"]
# napi-build pins the real workspace MSRV floor (rust-version 1.88); the core
# crate itself only needs serde/serde_json. So 1.88 is the true MSRV — same as
# the sibling turbo-html2pdf workspace.
rust-version = "1.88"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
