[package]
name = "turbo-xlsx-core"
description = "Native structured-workbook-model to XLSX (OOXML SpreadsheetML) writer + optional reader (core crate)"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# The cyclomatic-complexity gate (cc < 6) is enforced by `tools/cc-check`, which
# matches the TS gate in `scripts/cc-check.js`.

[features]
# Re-exports internal phase entry points (styles/worksheet/zip/crc) so the
# hotspot harness can time each in isolation. OFF by default → not compiled into
# the shipped library or the coverage build.
bench-internals = []

# XLSX parsing (read side): a dependency-free inflate + zip reader + XML
# tokenizer that reads an .xlsx into a ParsedWorkbook and serializes it to
# JSON/CSV/Markdown. OFF by default — the default build stays a pure writer and
# the (branch-heavy) parser is kept out of the 100% coverage gate. Enabled by the
# bindings and the MCP server.
parse = []

# XLSX password protection (ECMA-376 Agile Encryption): AES-256-CBC + SHA-512 key
# derivation + HMAC integrity, wrapped in a CFB/OLE2 container. OFF by default —
# the base build stays dependency-free; turning it on pulls the vetted RustCrypto
# stack below. Like `parse`, the module is excluded from the 100% coverage gate
# (crypto round-trips are validated functionally against msoffcrypto-tool).
encrypt = ["dep:aes", "dep:cbc", "dep:sha2", "dep:hmac", "dep:getrandom", "dep:cfb"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Fast, allocation-free integer formatting for the per-cell hot loop (row/column
# refs, style indices, integer values). Already in the serde_json tree.
itoa = "1"

# Crypto for the optional `encrypt` feature only (vetted RustCrypto crates). All
# optional, so a default build links none of them.
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", features = ["block-padding", "alloc"], optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
getrandom = { version = "0.2", optional = true }
cfb = { version = "0.10", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
criterion = "0.5"

# Criterion benchmark harness measuring the two shapes the perf targets call out
# (a styled 1k-row batch write and a 50k-row streamed write). Excluded from the
# default `cargo test` harness; invoke with `cargo bench`.
[[bench]]
name = "write"
harness = false

# Phase-by-phase hotspot profiler. Needs the `bench-internals` feature to reach
# the internal phase entry points. Run: `cargo bench --features bench-internals --bench hotspot`.
[[bench]]
name = "hotspot"
harness = false
required-features = ["bench-internals"]
