[package]
name = "turbo-xlsx-napi"
description = "N-API binding: the turbo-xlsx workbook-model->XLSX writer exposed to Node/JS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# cdylib for the Node native addon; rlib so the binding can be unit-tested and
# linked from Rust if ever needed. Mirrors the sibling turbo-html2pdf napi crate.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
turbo-xlsx-core = { path = "../turbo-xlsx-core" }
serde = { workspace = true }
serde_json = { workspace = true }
# napi-rs front-end (native addon). `napi6` matches the turbo-* ABI baseline.
napi = { version = "2", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = "2"
# Faster small-allocation churn for the write hot path (many short Strings/Vecs).
# `default-features = false` drops the `secure` hardening for raw throughput.
mimalloc = { version = "0.1", default-features = false }

[build-dependencies]
napi-build = "2"
